--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,9 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Project data directories (ignore large datasets)
+HNX/
+HSX/
+data/
+vn_indices/
