--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pydantic (>=2.11.7,<3.0.0)",
     "pyarrow (>=21.0.0,<22.0.0)",
     "pytest (>=8.4.1,<9.0.0)",
-    "pyyaml (>=6.0.2,<7.0.0)"
+    "pyyaml (>=6.0.2,<7.0.0)",
+    "matplotlib (>=3.9.0,<4.0.0)"
 ]
 
 
